feat: extend admin api to support proxy participants
